# CurrencyExchange

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  Common.hpp
Server/: CMakeLists.txt  Common.hpp  Server.cpp
